# Forge-apr8

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_PLANv4.md  CLAUDE.md  Dockerfile  FORGE_CODEX_PLAN.md  FORGE_SYSTEM_DESCRIPTION.md  FORGE_TEST_PLAN.md  Forge_Phase1_Build_Plan.md  Forge_Phase1_Merged_Plan.md  Forge_Phase2_Build_Plan.md  TEST_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  test_results.xml
.playwright-cli/: page-2026-04-19T17-17-58-828Z.yml  page-2026-04-19T17-18-27-624Z.yml  page-2026-04-19T17-20-30-537Z.yml  page-2026-04-19T17-22-43-289Z.yml
alembic/: env.py
alembic/versions/: 2f6b2d7918be_reasoning_records.py  3d781c3d720f_initial_schema.py  5a12d8b9c101_knowledge_chunks.py  67f0237b4df9_runtime_phase1.py  8f3a5c1d2b7e_phase2_build_metadata.py  c4e9a6f2b1d3_task_lifecycle_and_recovery.py
artifacts/: accountant_factory_run.json
component_library/: __init__.py  component_factory.py  interfaces.py  registry.py  status.py
component_library/data/: context_assembler.py  knowledge_base.py  operational_memory.py  org_context.py  working_memory.py
component_library/models/: anthropic_provider.py  litellm_router.py
component_library/quality/: adversarial_review.py  approval_manager.py  audit_system.py  autonomy_manager.py  autonomy_matrix.yaml  compliance_rules.py  confidence_scorer.py  evidence_binder.py  explainability.py  input_protection.py  policy_authority_engine.py  quality_review_engine.py  roi_meter.py  schemas.py  verification_layer.py
component_library/tools/: adapter_runtime.py  calendar_tool.py  crm_tool.py  custom_api_tool.py  document_ingestion.py  email_tool.py  file_storage_tool.py  messaging_tool.py  search_tool.py
component_library/work/: __init__.py  communication_manager.py  data_analyzer.py  document_analyzer.py  draft_generator.py  monitor_scanner.py  research_engine.py  scheduler_manager.py  schemas.py  task_orchestrator.py  text_processor.py  work_intake_router.py  workflow_executor.py
docs/: PILOT_READINESS_RUNBOOK.md
docs/proof/: accountant_paid_proof_contract.md
employee_runtime/core/: api.py  auth.py  conversation_repository.py  engine.py  kernel.py  runtime_db.py  state.py  task_repository.py  task_state_machine.py  tool_broker.py
employee_runtime/modules/: behavior_manager.py  communication.py  deliberation.py  growth.py  pulse_engine.py
employee_runtime/shared/: __init__.py  observability.py  orm.py  settings.py
employee_runtime/templates/: Dockerfile.template  config.template.yaml  docker-compose.template
employee_runtime/workflow_packs/: __init__.py  base.py  packs.py  registry.py
employee_runtime/workflows/: __init__.py  dynamic_builder.py  executive_assistant.py  legal_intake.py
factory/: auth.py  config.py  database.py  main.py  persistence.py
factory/api/: __init__.py  analyst.py  auth.py  builds.py  commissions.py  deployments.py  health.py  monitoring.py  roster.py  updates.py
factory/commissioning/: __init__.py  fixtures.py
factory/federated/: __init__.py  pattern_aggregator.py  privacy_engine.py
factory/models/: __init__.py  blueprint.py  build.py  client.py  deployment.py  monitoring.py  orm.py  package_manifest.py  requirements.py
factory/observability/: langfuse_client.py
factory/pipeline/: __init__.py
factory/updates/: __init__.py  learning_updater.py  marketplace.py  module_upgrader.py  policy_manager.py  security_updater.py
factory/workers/: celery_app.py  monitor_worker.py  pipeline_worker.py
portal/: README.md
portal/employee_app/: electron-builder.yml  global.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
portal/factory_portal/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: docker-relay-wrapper.sh  pilot_readiness_smoke.py  prove_accountant_employee.py  prove_server_export.py
tests/: conftest.py
tests/components/: test_component_factory.py  test_horizontal_employee_modules.py  test_registry.py
tests/factory/: test_accountant_commissioning.py  test_auth.py  test_generator_routing.py  test_orm.py  test_persistence.py
tests/fixtures/: sample_emails.py
tests/integration/: test_legal_intake_workflow.py
tests/observability/: test_langfuse_integration.py
tests/runtime/: test_accountant_actual_work.py  test_autonomous_daily_loop.py  test_behavior_rules.py  test_conversation_persistence.py  test_deliberation_council.py  test_dynamic_workflow.py  test_employee_api.py  test_executive_assistant_api.py  test_general_employee_kernel.py  test_pilot_readiness_runbook.py  test_pilot_readiness_smoke.py  test_runtime_auth.py  test_sovereignty_imports.py  test_task_recovery.py  test_task_recovery_skip_guard.py  test_task_state_machine.py  test_workflow_packs.py
(+194 files in other folders)
