[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.2.0"
description = "Forge — AI Employee Manufacturing System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API / server
    "fastapi>=0.136.0,<1",
    "uvicorn[standard]>=0.44.0,<1",
    "python-multipart>=0.0.26,<1",
    "itsdangerous>=2.2,<3",
    "jinja2>=3.1.6,<4",

    # Validation / settings
    "pydantic>=2.13.2,<3",
    "pydantic-settings>=2.13.1,<3",

    # HTTP
    "httpx>=0.28.1,<1",

    # Auth
    "pyjwt>=2.12.1,<3",

    # Agent / LLM
    "langgraph>=1.1.8,<2",
    "instructor>=1.15.1,<2",
    "litellm>=1.83.10,<2",

    # Database
    "sqlalchemy>=2.0.49,<3",
    "alembic>=1.18.4,<2",
    "asyncpg>=0.31.0,<1",
    "aiosqlite>=0.22.1,<1",
    "pgvector>=0.4.2,<1",

    # Cache / queue
    "redis>=7.4.0,<8",
    "celery>=5.6.3,<6",

    # Logging
    "structlog>=25.5.0,<26",
]

[project.optional-dependencies]
platform = [
    "composio-core>=0.7.21,<0.8",
    "infisical-python>=2.3.6,<3",
    "unstructured>=0.22.21,<0.23",
    "tavily-python>=0.7.23,<0.8",
]
observability = [
    "langfuse>=4.3.1,<5",
]
safety = [
    "guardrails-ai>=0.10.0,<1",
]
evals = [
    "deepeval>=3.9.7,<4",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.15.11,<0.16",
    "mypy>=1.20.1,<2",
    "httpx>=0.28.1,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["factory*", "component_library*", "employee_runtime*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["factory", "component_library", "employee_runtime"]
exclude = "(^tests/|^alembic/|^portal/|^employee_runtime/workflows/|^employee_runtime/core/engine.py$|^factory/workers/|^factory/database.py$|^component_library/models/)"
ignore_missing_imports = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "call-overload",
    "import-untyped",
    "misc",
    "no-any-return",
    "no-untyped-call",
    "no-untyped-def",
    "return-value",
    "type-arg",
    "union-attr",
]
warn_unused_configs = true
